--- a/angularenv/src/app/components/catalogue/catalogue.component.html
+++ b/angularenv/src/app/components/catalogue/catalogue.component.html
@@ -22,6 +22,7 @@
       <!--Traverse thru the postList.-->
       <td>{{postList[i].title}}</td>
       <td>{{postList[i].description}}</td>
+      <td><img src="{{postList[i].url}}" class="responsive"></td>
     </tr>
   </tbody>
 </table>
