--- a/angularenv/src/app/components/catalogue/catalogue.component.html
+++ b/angularenv/src/app/components/catalogue/catalogue.component.html
@@ -20,7 +20,8 @@
       <td>{{catalog.DateCreated}}</td>
       <td>{{catalog.DateModified}}</td>
       <td>
-        <app-post CatalogID ="{{catalog.CatalogId}}"></app-post>
+        <!--<app-post CatalogID ="{{catalog.CatalogId}}"></app-post>-->
+        <app-post [CatalogID] ="catalog.CatalogId"></app-post>
       </td>
       
       <!--Traverse thru the postList.-->
