--- a/angularenv/src/app/components/post/post.component.html
+++ b/angularenv/src/app/components/post/post.component.html
@@ -1,20 +1,22 @@
 <p>post works!</p>
 
   <h2>This is a mini post-table.</h2>
-  <table class="table table-striped">
+  <table>
     <thead>
+      <th>ID</th>
       <th>Title</th>
       <th>Description</th>
-      <th>URL</th>
+      <th>Image</th>
       <th>User</th>
     </thead>
 
-  <tbody *ngFor="let post of postList">
+  <tbody *ngFor="let post of PostList">
       <tr> 
-        <td>{{post.Title}}</td> <!--For reference-->
-        <td>{{post.Description}}</td>
-        <td>{{post.URL}}</td>
-        <td>{{post.User}}</td>
+        <td>{{post.id}}</td>
+        <td>{{post.title}}</td> <!--For reference-->
+        <td>{{post.description}}</td> 
+        <th><img src="{{post.url}}" class="responsive"></th>
+        <td>{{post.UserId}}</td>
       </tr>
     </tbody>
 </table>
