--- a/angularenv/src/app/components/navbar/navbar.component.html
+++ b/angularenv/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,14 @@
 <p>navbar works!</p>
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#DeepSkyList">Deep Sky Catalogue</a>
-  <a href="#APOD">Astronomy Pic of Day</a>
-</div>
+<nav class="navbar navbar-dark bg-dark">
+  <div class="topnav">
+    <li class="nav-item">
+       <a class="active" routerLink="">Home</a>
+    </li> 
+    <li class="nav-item">
+      <a routerLink="catalog">Deep Sky Catalogue</a>
+    </li>
+    
+  </div>
+</nav>
+
+
