--- a/angularenv/src/app/components/home/home.component.html
+++ b/angularenv/src/app/components/home/home.component.html
@@ -2,3 +2,14 @@
 
 <h1>This is the Astronomy Picture of the Day.</h1>
 
+<div class="text-center">
+  <h2>The title is: {{APODTitle}}</h2>
+  <h2>The date of this picture is {{APODDate}}</h2>
+  <h2>The URL of this picture is {{APODURL}}</h2>
+  <img src="{{APODURL}}">
+  <h3>Here is the following description: <br>
+    {{APODDesc}}
+  </h3>
+</div>
+
+
