--- a/angularenv/src/app/components/navbar/navbar.component.html
+++ b/angularenv/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,16 @@
-<p>navbar works!</p>
-<nav class="navbar navbar-dark bg-dark">
-  <div class="topnav">
-    <li class="nav-item">
-       <a class="active" routerLink="">Home</a>
-    </li> 
-    <li class="nav-item">
-      <a routerLink="catalog">Deep Sky Catalogue</a>
-    </li>
-    
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="active" routerLink="">Home</a>
+      </li> 
+      <li class="nav-item">
+        <a routerLink="catalog">Deep Sky Catalogue</a>
+      </li>  
+      <li style="float:right" class="nav-item" >
+        <a href="signIn">User Sign In</a> 
+      </li>
+    </ul>  
   </div>
 </nav>
 
