implement user functionality

--- a/angularenv/src/app/components/navbar/navbar.component.html
+++ b/angularenv/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <a routerLink="catalog">Deep Sky Catalogue</a>
       </li>  
       <li style="float:right" class="nav-item" >
-        <a href="signIn">User Sign In</a> 
+        <a routerLink="user">User Sign In</a> 
       </li>
     </ul>  
   </div>
