clean-up all functionalities

--- a/angularenv/src/app/components/catalogue/catalogue.component.html
+++ b/angularenv/src/app/components/catalogue/catalogue.component.html
@@ -21,7 +21,7 @@
       <td>{{catalog.DateCreated}}</td>
       <td>{{catalog.DateModified}}</td>
 
-      <td>
+      <td style="text-align: center">
         <app-nasa-image-api [CatalogID]="catalog.Name"></app-nasa-image-api>
       </td>
 
