--- a/angularenv/src/app/components/home/home.component.html
+++ b/angularenv/src/app/components/home/home.component.html
@@ -1,15 +1,12 @@
-<p>home works!</p>
-
 <h1>This is the Astronomy Picture of the Day.</h1>
 
 <div class="text-center">
-  <h2>The title is: {{APODTitle}}</h2>
-  <h2>The date of this picture is {{APODDate}}</h2>
-  <h2>The URL of this picture is {{APODURL}}</h2>
+  <h3>This is the title of the picture. {{APODTitle}}</h3>
+  <h3>The picture was taken on: {{APODDate}}</h3>
   <img src="{{APODURL}}">
-  <h3>Here is the following description: <br>
+  <h4>Please read on to learn more about the picture: <br>
     {{APODDesc}}
-  </h3>
+  </h4>
 </div>
 
 
